[tool.poetry]
name = "flask-fullstack"
version = "0.4.14"
description = "A utility package for projects using flask, sqlalchemy, socketio and pytest"
authors = ["niqzart <qwert45hi@yandex.ru>"]
readme = "README.md"
packages = [{include = "flask_fullstack"}]
urls = {github = "https://github.com/niqzart/flask-fullstack"}

[tool.poetry.dependencies]
python = "^3.9"
werkzeug = ">=2.3.2,<2.4.0"
flask = ">=2.3.2,<2.4.0"
flask-cors = ">=3.0.10,<3.1.0"
flask-jwt-extended = ">=4.5.2,<4.6.0"
flask-restx = ">=1.0.3,<1.1.0"
flask-sqlalchemy = ">=3.0.3,<3.1.0"
flask-socketio = ">=5.3.3,<5.4.0"
pydantic = ">=1.9.0,<1.10.0"
sqlalchemy = ">=1.4.31,<1.5.0"
whoosh = ">=2.7.4,<2.8.0"
whooshalchemy = ">=0.3.1,<0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
