[tool.poetry]
name = "flask-fullstack"
version = "0.5.5"
description = "A utility package for projects using flask, sqlalchemy, socketio and pytest"
authors = ["niqzart <niqzart@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_fullstack"}]
urls = {github = "https://github.com/niqzart/flask-fullstack"}
exclude = [
    "examples",
    "tests",
    "docs",
]

[tool.poetry.dependencies]
python = "^3.10"
werkzeug = ">=2.2.0,<2.4.0"
flask = ">=2.2.0,<2.4.0"
flask-cors = ">=3.0.10,<3.1.0"
flask-jwt-extended = ">=4.5.2,<4.6.0"
flask-restx = ">=1.0.3,<1.1.0"
flask-sqlalchemy = ">=3.0.3,<3.2.0"
flask-socketio = ">=5.1.2,<5.4.0"
pydantic = ">=2.0,<3.0"
sqlalchemy = ">=1.4.31,<3.0.0"
whoosh = ">=2.7.4,<2.8.0"
whooshalchemy = ">=0.3.1,<0.4.0"
pydantic-marshals = "^0.2.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
autoflake = "1.6.0"
flake8 = "4.0.1"
wemake-python-styleguide = "0.17.0"

[tool.isort]
profile = "black"
py_version = 311
combine_as_imports = true
no_lines_before = "LOCALFOLDER"
reverse_relative = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
